--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Host=localhost;Port=5432;Username=user;Password=user;Database=postgres;"
+  },
+  "OAuth": {
+    "ClientId": "twider",
+    "Audience": "twider",
+    "AuthorizationUrl":  "http://localhost:6969/realms/master/protocol/openid-connect/auth",
+    "Authority": "http://localhost:6969/realms/master",
+    "TokenUrl":  "http://localhost:6969/realms/master/protocol/openid-connect/token"
   }
 }
