--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Host=localhost;Port=5432;Username=user;Password=user;Database=postgres;"
+  },
   "AllowedHosts": "*"
 }
