--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,9 @@
 ﻿services:
-  backend:
-    image: backend
-    build:
-      context: .
-      dockerfile: Backend/Dockerfile
+  database:
+    image: postgres:16.4
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: user
+    ports:
+      - 5432:5432
