--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentResults" Version="3.16.0" />
         <PackageReference Include="MediatR" Version="12.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15" />
@@ -20,8 +21,10 @@
         </PackageReference>
         <PackageReference Include="Microsoft.IdentityModel.Logging" Version="8.8.0" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.8.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.1.13" />
+        <PackageReference Include="Schick.Keycloak.RestApiClient" Version="26.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
     </ItemGroup>
