--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -14,5 +14,11 @@
     "AuthorizationUrl":  "http://localhost:6969/realms/master/protocol/openid-connect/auth",
     "Authority": "http://localhost:6969/realms/master",
     "TokenUrl":  "http://localhost:6969/realms/master/protocol/openid-connect/token"
+  },
+  "Keycloak": {
+    "Url": "http://localhost:6969",
+    "Realm": "master",
+    "Username": "admin",
+    "Password": "admin"
   }
 }
