--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -20,6 +20,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.IdentityModel.Logging" Version="8.8.0" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.8.0" />
+        <PackageReference Include="Minio" Version="6.0.4" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.1.13" />
