--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -20,5 +20,10 @@
     "Realm": "master",
     "Username": "admin",
     "Password": "admin"
+  },
+  "Minio": {
+    "Endpoint": "localhost:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin"
   }
 }
