--- a/Backend/compose.yaml
+++ b/Backend/compose.yaml
@@ -7,6 +7,7 @@ services:
       POSTGRES_PASSWORD: user
     ports:
       - "5432:5432"
+
   keycloak:
     image: quay.io/keycloak/keycloak:23.0.7
     environment:
@@ -16,3 +17,17 @@ services:
       - "6969:8080"
     command:
       - start-dev
+
+  minio:
+    image: quay.io/minio/minio
+    container_name: minio1
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - ./cache/minio/data:/data
+    user: "${UID}:${GID}"
+    command: server /data --console-address ":9001"
