Refactor likes to reactions and add reaction functionality

--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDbContext": "Host=localhost;Port=5432;Username=user;Password=user;Database=postgres;"
+    "ApplicationDbContext": "Host=localhost;Port=5432;Username=user;Password=user;Database=postgres;Include Error Detail=True"
   },
   "OAuth": {
     "ClientId": "twider",
