--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -37,6 +37,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Features\Reaction\Commands\" />
       <Folder Include="Features\User\Commands\" />
     </ItemGroup>
 
