--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <IsAspireSharedProject>true</IsAspireSharedProject>
+        <UserSecretsId>c84405c5-f357-47d9-b373-b481a8edba98</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
