setup qdrant and openAI client

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -24,6 +24,8 @@
         <PackageReference Include="Minio" Version="6.0.4" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+        <PackageReference Include="OpenAI" Version="2.1.0"/>
+        <PackageReference Include="Qdrant.Client" Version="1.14.0"/>
         <PackageReference Include="Riok.Mapperly" Version="4.2.1" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.1.13" />
         <PackageReference Include="Schick.Keycloak.RestApiClient" Version="26.2.0" />
