--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -25,5 +25,11 @@
     "Endpoint": "localhost:9000",
     "AccessKey": "minioadmin",
     "SecretKey": "minioadmin"
+  },
+  "Qdrant": {
+    "Url": "http://localhost:6333"
+  },
+  "OpenAI": {
+    "ApiKey": "your-openai-api-key-here"
   }
 }
