--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "ApplicationDbContext": "Host=localhost;Port=5432;Username=user;Password=user;Database=postgres;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Qdrant": {
+    "Url": "http://localhost:6333"
+  },
+  "OpenAI": {
+    "ApiKey": "your-openai-api-key-here"
+  }
 }
