--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Microsoft.IdentityModel.Logging" Version="8.8.0" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.8.0" />
         <PackageReference Include="Minio" Version="6.0.4" />
+        <PackageReference Include="NATS.Net" Version="2.6.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
         <PackageReference Include="OpenAI" Version="2.1.0"/>
