--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -31,5 +31,8 @@
   },
   "OpenAI": {
     "ApiKey": "your-openai-api-key-here"
+  },
+  "MlSearch": {
+    "BaseUrl": "http://localhost:8000"
   }
 }
