--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -14,5 +14,8 @@
   },
   "OpenAI": {
     "ApiKey": "your-openai-api-key-here"
+  },
+  "MlSearch": {
+    "BaseUrl": "http://localhost:8000"
   }
 }
