--- a/Backend/compose.yaml
+++ b/Backend/compose.yaml
@@ -44,3 +44,17 @@ services:
       - "6334:6334"
     volumes:
       - ./cache/qdrant:/qdrant/storage:z
+
+  nats:
+    image: nats:2.11.4-linux
+    ports:
+      - "4222:4222"
+      - "6222:6222"
+      - "8222:8222"
+    command:
+      - -js
+      - -sd
+      - /data
+    volumes:
+      - ./cache/nats:/data
+    user: "${UID}:${GID}"
