--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -11,40 +11,43 @@
 
     <ItemGroup>
         <InternalsVisibleTo Include="BackendTest"/>
-        <PackageReference Include="MediatR" Version="12.5.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.3.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15" />
+        <PackageReference Include="MediatR" Version="12.5.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.3.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.14"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.15" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.15"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.15">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.IdentityModel.Logging" Version="8.8.0" />
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.8.0" />
-        <PackageReference Include="Minio" Version="6.0.4" />
-        <PackageReference Include="NATS.Net" Version="2.6.1" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+        <PackageReference Include="Microsoft.IdentityModel.Logging" Version="8.8.0"/>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.8.0"/>
+        <PackageReference Include="Minio" Version="6.0.4"/>
+        <PackageReference Include="NATS.Net" Version="2.6.1"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11"/>
         <PackageReference Include="OpenAI" Version="2.1.0"/>
         <PackageReference Include="Qdrant.Client" Version="1.14.0"/>
-        <PackageReference Include="Riok.Mapperly" Version="4.2.1" />
-        <PackageReference Include="Scalar.AspNetCore" Version="2.1.13" />
-        <PackageReference Include="Schick.Keycloak.RestApiClient" Version="26.2.0" />
+        <PackageReference Include="Riok.Mapperly" Version="4.2.1"/>
+        <PackageReference Include="Scalar.AspNetCore" Version="2.1.13"/>
+        <PackageReference Include="Schick.Keycloak.RestApiClient" Version="26.2.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
+        <None Update="Data\cat.jpeg">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Features\Chat\" />
-      <Folder Include="Features\Reaction\Commands\" />
-      <Folder Include="Features\User\Commands\" />
+        <Folder Include="Features\Chat\"/>
+        <Folder Include="Features\Reaction\Commands\"/>
+        <Folder Include="Features\User\Commands\"/>
     </ItemGroup>
 
 </Project>
