--- a/Twitter/appsettings.Development.json
+++ b/Twitter/appsettings.Development.json
@@ -4,5 +4,35 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Host=localhost;Port=5432;Username=user;Password=user;Database=postgres;Include Error Detail=True"
+  },
+  "OAuth": {
+    "ClientId": "twider",
+    "Audience": "twider",
+    "AuthorizationUrl":  "http://localhost:6969/realms/master/protocol/openid-connect/auth",
+    "Authority": "http://localhost:6969/realms/master",
+    "TokenUrl":  "http://localhost:6969/realms/master/protocol/openid-connect/token"
+  },
+  "Keycloak": {
+    "Url": "http://localhost:6969",
+    "Realm": "master",
+    "Username": "admin",
+    "Password": "admin"
+  },
+  "Minio": {
+    "Endpoint": "localhost:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin"
+  },
+  "Qdrant": {
+    "Url": "http://localhost:6333"
+  },
+  "OpenAI": {
+    "ApiKey": "your-openai-api-key-here"
+  },
+  "MlSearch": {
+    "BaseUrl": "http://localhost:8000"
   }
 }
